add results view and final result after 5 rounds

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <script src="script-main.js" defer></script>
 </head>
 <body>
+    <h1>Rock Paper Scissors</h1>
+    <h3>Select:</h3>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
     <div id="results">
-        <h3>Result:</h3>
+        <h3>Result (To 5 Points):</h3>
     </div>
 </body>
 </html>
